--- a/templates/News/NewsUpdateFormTemplate.html
+++ b/templates/News/NewsUpdateFormTemplate.html
@@ -8,7 +8,7 @@
     <div class="main_header">
         <text>Редактирование новости</text>
     </div>
-    <form action="" method="POST">
+    <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {% for field in form %}
             <div class="form-group">
